process data and analysis

--- a/notebooks/Extract Data.ipynb
+++ b/notebooks/Extract Data.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
        "dict_keys(['events', 'game_settings', 'phases', 'teams', 'total_players', 'elements', 'element_stats', 'element_types'])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,7 +50,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "events\n",
+      "game_settings\n",
+      "phases\n",
+      "teams\n",
+      "total_players\n",
+      "elements\n",
+      "element_stats\n",
+      "element_types\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key in json.keys():\n",
+    "    print(key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -89,19 +114,22 @@
     "    # get logger\n",
     "    logger = logging.getLogger(__name__)\n",
     "    logger.info('getting raw data')\n",
-    "    \n",
-    "    # key for player elements\n",
-    "    key = 'elements'\n",
+    "        \n",
     "    \n",
     "    # urls\n",
     "    train_url = 'https://fantasy.premierleague.com/api/bootstrap-static/'\n",
     "    \n",
     "    # file paths\n",
     "    raw_data_path = os.path.join(project_dir,'data','raw')\n",
-    "    train_data_path = os.path.join(raw_data_path,'train.csv')\n",
-    "    \n",
+    "    elements_data_path = os.path.join(raw_data_path,'elements.csv')\n",
+    "    element_types_data_path = os.path.join(raw_data_path,'element_types.csv')\n",
+    "    teams_data_path = os.path.join(raw_data_path,'teams.csv')\n",
+    "\n",
     "    # extract data\n",
-    "    extract_data(key, train_url, train_data_path)\n",
+    "    extract_data('elements', train_url, elements_data_path)\n",
+    "    extract_data('element_types', train_url, element_types_data_path)\n",
+    "    extract_data('teams', train_url, teams_data_path)\n",
+    "\n",
     "    logger.info('downloaded raw training data')\n",
     "    \n",
     "if __name__ == '__main__':\n",
@@ -119,15 +147,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2020-10-01 18:24:27,662 - __main__ - INFO - getting raw data\n",
-      "2020-10-01 18:24:27,804 - __main__ - INFO - downloaded raw training data\n"
+      "2020-10-01 19:01:56,307 - __main__ - INFO - getting raw data\n",
+      "2020-10-01 19:01:56,592 - __main__ - INFO - downloaded raw training data\n"
      ]
     }
    ],
